fix tag dialog overflow

--- a/styles.css
+++ b/styles.css
@@ -492,6 +492,8 @@
 #modalText {
     z-index: 99999999999; 
     color: black;
+    max-height: 500px;
+    overflow-y: auto;
 }
 .modal-close {
 
